main: added docstrings

--- a/.pylintrc
+++ b/.pylintrc
@@ -2,7 +2,7 @@
 ignore = .git,__pycache__
 
 [MESSAGES CONTROL]
-disable = C0114, C0115, C0116, W0621, R1705
+disable = C0115, C0116, W0621, R1705, E0401, C0413
 
 [FORMAT]
-max-line-length = 120
+max-line-length = 200
